--- a/webroot/index.html
+++ b/webroot/index.html
@@ -24,6 +24,7 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Encryption Key ACL Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/keysets.html">Keyset Access Management</a></li>
     <li class="ro-sem" style="display: none"><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
     <li class="ro-sem" style="display: none"><a href="/adm/salt.html">Salts Management</a></li>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/operator-key.html">Operator Key Management</a></li>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/enclave-id.html">Enclave ID Management</a></li>
