--- a/webroot/adm/encryption-key.html
+++ b/webroot/adm/encryption-key.html
@@ -29,16 +29,25 @@
 
 <h3>Operations</h3>
 
+<h4> Legacy Keys</h4>
 <ul>
     <li class="ro-sem" style="display: none"><a href="#" id="doListKeys">List Keys</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doListKeysBySite">List Keys By Site</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doListKeysetKeys">List Keyset Keys</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doListKeysetKeysByKeysetId">List Keyset Keys By Keyset Id</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doRotateMaster">Rotate Master Key</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doAddSiteKey">Add Site Key</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doRotateSite">Rotate Site Key</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doRotateAllSites">Rotate All Site Keys</a></li>
+</ul>
+
+<h4>Keyset Keys</h4>
+<ul>
+    <li class="ro-sem" style="display: none"><a href="#" id="doListKeysetKeys">List Keyset Keys</a></li>
+    <li class="ro-sem" style="display: none"><a href="#" id="doListKeysetKeysByKeysetId">List Keyset Keys By Keyset Id</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doRotateKeysetKey">Rotate Keyset Key</a></li>
+</ul>
+
+<h4>Master Keys</h4>
+<ul>
+    <li class="ro-sem" style="display: none"><a href="#" id="doRotateMaster">Rotate Master Keys</a></li>
 </ul>
 
 <br>
