--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -19,6 +19,8 @@
 <input type="text" id="roles" name="roles">
 <label for="siteId">Site Id:</label>
 <input type="text" id="siteId" name="siteId" value="1">
+<label for="cloudAccountId">Cloud Account Id:</label>
+<input type="text" id="cloudAccountId" name="cloudAccountId">
 <br>
 <br>
 
@@ -33,6 +35,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetSite">Update Site</a></li>
+    <!-- TODO Add an operation to update Cloud Account Id -->
 </ul>
 
 <br>
@@ -74,7 +77,8 @@
             var clientName = encodeURIComponent($('#clientName').val());
             var roles = encodeURIComponent($('#roles').val());
             var siteId = encodeURIComponent($('#siteId').val());
-            var url = '/api/client/add?name=' + clientName + '&roles=' + roles + '&site_id=' + siteId;
+            var cloudAccountId = encodeURIComponent($('#cloudAccountId').val());
+            var url = '/api/client/add?name=' + clientName + '&roles=' + roles + '&site_id=' + siteId + '&cloud_account_id=' + cloudAccountId;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
@@ -130,6 +134,10 @@
             var url = '/api/client/rename?oldName=' + oldClientName + '&newName=' + newClientName;
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
+        /*
+        TODO Add method to update Cloud Account Id
+        */
+
     });
 </script>
 
