added ui for services

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -22,6 +22,12 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/site.html">Site Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
 </ul>
+
+<ul>
+    <li class="ro-adm" style="display: none"><a href="/adm/services.html">Service Management</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/service-links.html">Service Link Management</a></li>
+</ul>
+
 <ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/client-key.html">Client Key Management</a></li>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Encryption Key ACL Management</a></li>
