added ui for service links

--- a/webroot/adm/services.html
+++ b/webroot/adm/services.html
@@ -18,7 +18,7 @@
     <input type="text" id="serviceId" name="serviceId">
     <label for="siteId">Site Id:</label>
     <input type="text" id="siteId" name="siteId">
-    <label for="serviceName">Name:</label>
+    <label for="serviceName">Service Name:</label>
     <input type="text" id="serviceName" name="serviceName">
     <label for="roles">Roles:</label>
     <input type="text" id="roles" name="roles">
