--- a/webroot/adm/site.html
+++ b/webroot/adm/site.html
@@ -18,7 +18,7 @@
     <input type="text" id="siteName" name="siteName">
     <label for="siteId">Site Id:</label>
     <input type="text" id="siteId" name="siteId">
-    <label for="types">Types:</label>
+    <label for="types">Client Types:</label>
     <input type="text" id="types" name="types">
 </div>
 <br>
@@ -81,9 +81,13 @@
         $('#doSetTypes').on('click', function () {
             var siteId = encodeURIComponent($('#siteId').val());
             var types = encodeURIComponent($('#types').val());
+            if(types.length < 1) {
+                $('#errorOutput').html('Can not set types with empty types');
+                return;
+            }
             var url = '/api/site/set-types?id=' + siteId + '&types=' + types;
 
-            doApiCall('POST', url, '#standardOutput', '#errorOutpout');
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
 
         $('#doDomainNames').on('click', function () {
