Update key search in admin UI to account for hashed client/operator keys

--- a/webroot/adm/search.html
+++ b/webroot/adm/search.html
@@ -13,7 +13,7 @@
 
 <h3>Inputs</h3>
 
-<label for="key">Key or Secret:</label>
+<label for="key">Key or Hashed Key or Secret:</label>
 <input type="text" id="key" name="key" size="45">
 <a href="#" id="doSearch">Search</a>
 
