remove delete client key button

--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -40,7 +40,7 @@
 <h3>Low Level Operations - Do Not Use Unless Necessary</h3>
 
 <ul>
-    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Client Key</a></li>
+<!--    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Client Key</a></li>-->
     <li class="ro-adm" style="display: none"><a href="#" id="doRename">Rename Client Key (Click to enter new client name)</a></li>
 </ul>
 
