--- a/webroot/adm/enclave-gcp-v2.html
+++ b/webroot/adm/enclave-gcp-v2.html
@@ -83,9 +83,7 @@
     --image-project confidential-space-images \\\n\
     --image-family <IMAGE_FAMILY> \\\n\
     --service-account <SERVICE_ACCOUNT> \\\n\
-    --metadata ^~^tee-image-reference=ghcr.io/iabtechlab/uid2-operator@<IMAGE_SHA>~tee-restart-policy=Never~tee-env-DEPLOYMENT_ENVIRONMENT=<DEPLOYMENT_ENVIRONMENT>~tee-env-API_TOKEN=<API_TOKEN>'
-
-  const logRedirectCli= '~tee-container-log-redirect=true'
+    --metadata ^~^tee-image-reference=ghcr.io/iabtechlab/uid2-operator@<IMAGE_SHA>~tee-restart-policy=Never~tee-container-log-redirect=true~tee-env-DEPLOYMENT_ENVIRONMENT=<DEPLOYMENT_ENVIRONMENT>~tee-env-API_TOKEN=<API_TOKEN>'
 
   $('#gcloudCli').val(gcloudCli);
 
@@ -139,7 +137,6 @@
             .replaceAll('<IMAGE_SHA>', imageSha)
             .replaceAll('<DEPLOYMENT_ENVIRONMENT>', env);
 
-    cli += logRedirectCli;
     $('#gcloudCli').val(cli);
   }
 
