Add zone placeholder for GCP OIDC

--- a/webroot/adm/enclave-gcp-v2.html
+++ b/webroot/adm/enclave-gcp-v2.html
@@ -75,6 +75,7 @@
 
 <script language="JavaScript">
   const gcloudCli = '$ gcloud compute instances create <INSTANCE_NAME> \\\n\
+    --zone <ZONE> \\\n\
     --machine-type <MACHINE_TYPE> \\\n\
     --confidential-compute \\\n\
     --shielded-secure-boot \\\n\
