--- a/webroot/adm/services.html
+++ b/webroot/adm/services.html
@@ -33,7 +33,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doListBySite">List Services By Site Id</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doListByServiceId">Get Service By Service Id</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Service</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doRoles">Set Service Roles</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update Service</a></li>
 </ul>
 
 <br>
@@ -86,15 +86,17 @@
             doApiCall('POST', '/api/service/add', '#standardOutput', '#errorOutput', JSON.stringify({site_id: siteId, name: serviceName, roles: roles}));
         });
 
-        $('#doRoles').on('click', function () {
+        $('#doUpdate').on('click', function () {
             const serviceId = parseInt($('#serviceId').val())
             if(!serviceId) {
                 $('#errorOutput').text("required parameters: service_id")
                 return
             }
+            const siteId = parseInt($('#siteId').val())
+            const serviceName = $('#serviceName').val()
             const roles = ($('#roles').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
 
-            doApiCall('POST', '/api/service/roles', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId, roles: roles}));
+            doApiCall('POST', '/api/service/update', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId, site_id: siteId, name: serviceName, roles: roles}));
         });
     });
 </script>
