--- a/webroot/adm/services.html
+++ b/webroot/adm/services.html
@@ -37,6 +37,11 @@
 </ul>
 
 <br>
+<h3>Low Level Operations - Do Not Use Unless Necessary</h3>
+
+<ul>
+    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service</a></li>
+</ul>
 
 <h3>Output</h3>
 
@@ -97,6 +102,20 @@
             const roles = ($('#roles').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
 
             doApiCall('POST', '/api/service/update', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId, site_id: siteId, name: serviceName, roles: roles}));
+        });
+
+        $('#doDelete').on('click', function () {
+            if (!confirm("Are you sure?")) {
+                return;
+            }
+
+            const serviceId = parseInt($('#serviceId').val())
+            if(!serviceId) {
+                $('#errorOutput').text("required parameters: service_id")
+                return
+            }
+
+            doApiCall('POST', '/api/service/delete', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId}));
         });
     });
 </script>
